# zoopicasso_desktop

./: .coverage  .env  .gitignore  Facturas.bat  LOGGING.md  README.md  TESTING.md  main.py  poll_and_print.py  pyproject.toml  test_manual_tickets.py  tickets_main.py
data/: contador.json  contador_facturas.json  precios_categorias.json  tickets.xlsx  ventas.db
deploy/: backup_data.sh  duckdns-update.service  duckdns-update.timer  duckdns_update.sh  facturas-nginx.conf  facturas-web.service  install_vps.sh  restore_data.sh  update_app.sh
facturas/: factura_2026_003.xlsx  factura_2026_005.xlsx  factura_2026_007.xlsx  factura_2026_009.xlsx
src/: factura_counter.py  factura_model.py  factura_writer.py  monthly_closure.py  printer.py  settings.py  ventas_store.py
tests/: conftest.py  test_factura_counter.py  test_factura_counter_real.py  test_factura_model.py  test_factura_writer.py  test_factura_writer_real.py  test_integration.py  test_main_callbacks.py  test_printer.py  test_settings.py  test_settings_real.py  test_web_app.py
tickets_src/: counter.py  excel_writer.py  printer.py  ticket_model.py
web/: app.py
web/static/: app.css
web/templates/: index.html
